# 12-lis3mdl-drv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  lis3mdl.patch
app/: defines.h  main.c
drv/: CMakeLists.txt
hal/: CMakeLists.txt
hal/i2c/: CMakeLists.txt  i2c_hal.c  i2c_hal.h
patches/: lis3mdl.patch
